--- a/Quaranteen Project/Base.lproj/Main.storyboard
+++ b/Quaranteen Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zMm-Tv-fyF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zMm-Tv-fyF">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -316,11 +316,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="superFrog" translatesAutoresizingMaskIntoConstraints="NO" id="LhQ-ho-6Y1">
-                                <rect key="frame" x="94" y="191" width="201" height="183"/>
+                                <rect key="frame" x="89" y="176" width="236" height="229"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GROW" translatesAutoresizingMaskIntoConstraints="NO" id="GuX-Ca-L0B">
+                                <rect key="frame" x="141" y="413" width="133" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view contentMode="scaleToFill" id="FA5-nA-UBE" customClass="GIDSignInButton">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                                <rect key="frame" x="102" y="532" width="211" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <viewLayoutGuide key="safeArea" id="bPU-MG-hOO"/>
@@ -334,9 +338,25 @@
             </objects>
             <point key="canvasLocation" x="-1182.608695652174" y="143.97321428571428"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="uge-iA-s3v">
+            <objects>
+                <viewController id="7v3-5M-HOB" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vAH-xx-oUr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="br7-kB-nit"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9LP-Ve-SNm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-301" y="144"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Arrow 1" width="24" height="16"/>
+        <image name="GROW" width="122" height="30"/>
         <image name="homeIcon" width="37" height="35"/>
         <image name="profileIcon" width="28" height="28"/>
         <image name="progressIcon" width="34" height="34"/>
